using fixed height on payment tabs to avoid browser jumping when we change tabs

--- a/app/assets/stylesheets/catarse_bootstrap/_extra.sass
+++ b/app/assets/stylesheets/catarse_bootstrap/_extra.sass
@@ -65,10 +65,18 @@ body
     &.w-sub-col-middle
       padding-right: 20px
 
+#payment-engines.w-hidden
+  .tab_content_container
+    height: 510px
+
 @media (max-width: 767px)
   .w-col 
     .w-col.w-sub-col
       padding-right: 0px
+
+  #payment-engines.w-hidden
+    .tab_content_container
+      height: 610px
 
 .text-field.checkbox-fix
   display: inline-block
